// ************************************************************************
// Copyright (C) 2022 plgd.dev, s.r.o.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// ************************************************************************

syntax = "proto3";

package service.pb;

option go_package = "github.com/plgd-dev/client-application/pb;pb";

message GetInformationRequest {}

message UserAgentConfig {

}

message MediatorConfig {
    enum MODE {
        MODE_NONE = 0;
        MODE_USER_AGENT = 1;
    };
	MODE Mode = 1;
    UserAgentConfig UserAgent = 2;
}

message GetInformationResponse {
    string version = 1;
    string build_date = 2;
    string commit_hash = 3;
    string commit_date = 4;
    string release_url = 5;
}